# goit-pycore-hw-08

./: main.py  pyproject.toml
